<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@color/white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="250dp"
        android:gravity="end"
        android:textColor="@color/gray"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text=""
        android:textColor="@color/gray"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:layout_width="135dp"
        android:layout_height="4dp"
        android:layout_marginTop="1dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultView" />

    <!-- AC Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/orange"
        android:background="@drawable/rounded_button"
        android:text="@string/ac"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/buttonPercent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultView" />

    <!-- Percent Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPercent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/percent"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintStart_toEndOf="@+id/buttonAC"
        app:layout_constraintTop_toBottomOf="@+id/resultView" />

    <!-- Divide Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDivide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/_divide"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
        app:layout_constraintStart_toEndOf="@+id/buttonPercent"
        app:layout_constraintTop_toBottomOf="@+id/resultView" />

    <!-- Multiply Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMultiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/_multiply"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonDivide"
        app:layout_constraintTop_toBottomOf="@+id/resultView" />

    <!-- 7 Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/_7"
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAC"  />

    <!-- 8 Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/_8"
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/buttonPercent"/>

    <!-- 9 Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/_9"
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide" />

    <!-- + Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonPlus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/_plus"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply"/>

    <!-- 4 Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/_4"
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"  />

    <!-- 5 Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/_5"
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8"/>

    <!-- 6 Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/_6"
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <!-- - Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMinus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/_min"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus"/>

    <!-- 1 Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/_1"
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"  />

    <!-- 2 Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/_2"
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button5"/>

    <!-- 3 Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/_3"
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/buttonEqual"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <!-- Equal Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEqual"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/orange"
        android:background="@drawable/rounded_button"
        android:text="@string/_equals"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintDimensionRatio="1:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- 0 Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/_0"
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toStartOf="@+id/buttonDot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- . Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDot"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/_dot"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/buttonEqual"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>